--- a/index.html
+++ b/index.html
@@ -9,13 +9,117 @@
     <link rel="stylesheet" href="./src/style.css">
 </head>
 
-<body>
-    <main
-        class="w-full min-h-screen bg-gradient-to-r from-fuchsia-500 to-cyan-500 flex items-center justify-center">
-        <h1 class="font-mono font-bold text-3xl text-white drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)]">
-            Vite + Typescript + TailwindCSS + GitHub Pages
-        </h1>
-    </main>
+<body class="bg-white font-league_spartan">
+    <div class="w-full min-h-screen flex items-center justify-center z-10">
+        <div class="absolute w-full h-full top-0 left-0 overflow-hidden">
+            <img src="/images/bg-pattern-top-desktop.svg" alt="bg-pattern-top-desktop.svg"
+                class="md:block hidden h-[45vh] absolute top-0 left-0">
+            <img src="/images/bg-pattern-bottom-desktop.svg" alt="bg-pattern-bottom-desktop.svg"
+                class="md:block hidden absolute bottom-0 right-0 h-[80vh]">
+            <img src="/images/bg-pattern-top-mobile.svg" alt="bg-pattern-top-mobile.svg"
+                class="md:hidden w-full absolute top-0 left-0">
+            <img src="/images/bg-pattern-bottom-mobile.svg" alt="bg-pattern-bottom-mobile.svg"
+                class="md:hidden absolute bottom-0 right-0 w-full">
+        </div>
+        <main class="w-full min-h-full z-10 px-6 py-16 flex justify-center">
+            <!-- main container -->
+            <div class="flex flex-col md:w-[min(90vw,67rem)] w-ful md:gap-20 gap-12">
+                <!-- upper half -->
+                <div class="flex md:flex-row flex-col items-center gap-8 justify-between w-full">
+                    <!-- title & description -->
+                    <div class="flex flex-col md:w-[25rem] text-c_Very_Dark_Magenta gap-5">
+                        <h1 class="text-c_Very_Dark_Magenta md:text-left text-center md:text-[3rem] font-bold text-[2.25rem] leading-[2.25rem] md:px-0 px-10 md:leading-[3rem]">10,100+ of our users
+                            love our products.</h1>
+                        <p class="text-c_Very_Dark_Magenta md:text-left text-center md:px-0 px-4">
+                            We only provide great products combined with excellent customer service.
+                            See what our satisfied customers are saying about our services.
+                        </p>
+                    </div>
+                    <!-- rate container -->
+                    <div class="grid grid-rows-3 md:w-[27rem] gap-4 w-full">
+                        <div
+                            class="flex md:flex-row flex-col items-center py-[0.85rem] px-8 md:gap-8 gap-2 bg-c_Light_Grayish_Magenta rounded-lg md:-translate-x-[5.5rem]">
+                            <div class="flex items-center gap-2">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                            </div>
+                            <span class="text-c_Very_Dark_Magenta font-bold translate-y-[1.5px]">Rated 5 Stars in
+                                Reviews</span>
+                        </div>
+                        <div
+                            class="flex md:flex-row flex-col items-center py-[0.85rem] px-8 md:gap-8 gap-2 bg-c_Light_Grayish_Magenta rounded-lg md:-translate-x-[2.75rem]">
+                            <div class="flex items-center gap-2">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                            </div>
+                            <span class="text-c_Very_Dark_Magenta font-bold translate-y-[1.5px]">Rated 5 Stars in Report
+                                Guru</span>
+                        </div>
+                        <div class="flex md:flex-row flex-col items-center py-[0.85rem] px-8 md:gap-8 gap-2 bg-c_Light_Grayish_Magenta rounded-lg">
+                            <div class="flex items-center gap-2">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                                <img src="/images/icon-star.svg" alt="star icon">
+                            </div>
+                            <span class="text-c_Very_Dark_Magenta font-bold translate-y-[1.5px]">Rated 5 Stars in
+                                BestTech</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- lower half container -->
+                <div class="w-full md:grid grid-cols-3 flex flex-col md:gap-6 gap-4">
+                    <div class="bg-c_Very_Dark_Magenta rounded-lg flex flex-col py-8 px-6 gap-5 md:-translate-y-4">
+                        <div class="flex items-center gap-6">
+                            <img src="/images/image-colton.jpg" alt="Colton avatar" class="rounded-full size-10">
+                            <div class="flex flex-col">
+                                <span class="text-white font-medium">Colton Smith</span>
+                                <span class="text-c_Soft_Pink font-medium">Verified Buyer</span>
+                            </div>
+                        </div>
+                        <p class="text-white font-medium">
+                            "We needed the same printed design as the one we had ordered a week prior.
+                            Not only did they find the original order, but we also received it in time.
+                            Excellent!"
+                        </p>
+                    </div>
+                    <div class="bg-c_Very_Dark_Magenta rounded-lg flex flex-col py-8 px-6 gap-5">
+                        <div class="flex items-center gap-6">
+                            <img src="/images/image-irene.jpg" alt="Irene avatar" class="rounded-full size-10">
+                            <div class="flex flex-col">
+                                <span class="text-white font-medium">Irene Roberts</span>
+                                <span class="text-c_Soft_Pink font-medium">Verified Buyer</span>
+                            </div>
+                        </div>
+                        <p class="text-white font-medium">
+                            "Customer service is always excellent and very quick turn around. Completely
+                            delighted with the simplicity of the purchase and the speed of delivery."
+                        </p>
+                    </div>
+                    <div class="bg-c_Very_Dark_Magenta rounded-lg flex flex-col py-8 px-6 gap-5 md:translate-y-4">
+                        <div class="flex items-center gap-6">
+                            <img src="/images/image-anne.jpg" alt="Anne avatar" class="rounded-full size-10">
+                            <div class="flex flex-col">
+                                <span class="text-white font-medium">Anne Wallace </span>
+                                <span class="text-c_Soft_Pink font-medium">Verified Buyer</span>
+                            </div>
+                        </div>
+                        <p class="text-white font-medium">
+                            "Put an order with this company and can only praise them for the very high
+                            standard. Will definitely use them again and recommend them to everyone!"
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
     <script type="module" src="/src/main.ts"></script>
 </body>
 
